src/objects/OrderFulfillmentRequestEvent__e/OrderFulfillmentRequestEvent__e.object-meta.xml
<CustomObject>
    <label>OrderFulfillmentRequestEvent</label>
    <pluralLabel>OrdersFulfillmentRequestEvent</pluralLabel>
</CustomObject>