src/objects/OrderFulfillmentRequestEvent__e/fields/FulfillmentRequestId__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentRequestId__c</fullName>
    <label>FulfillmentRequestId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>