src/objects/OrderFulfillmentRequestEvent__e/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>OrderId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>