src/objects/OrderFulfillmentRequestEvent__e/fields/WarehouseId__c.field-meta.xml
<CustomField>
    <fullName>WarehouseId__c</fullName>
    <label>WarehouseId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>